# ectrans

./: .gitignore  AUTHORS  CMakeLists.txt  CMakeLists.txt2  MANIFEST.in  README.md  VERSION  ectrans_project.md  pyproject.toml  setup.py  test.txt
docs/examples/ectrans_demonstrator/: CMakeLists.txt  Makefile.template  ectrans_demonstrator.F90
src/etrans/: CMakeLists.txt  sedrenames.txt
src/etrans/biper/: CMakeLists.txt
src/etrans/biper/include/: fpbipere.h
src/etrans/biper/internal/: esmoothe_mod.F90  espline_mod.F90  ewindowe_mod.F90  extper_mod.F90
src/etrans/common/: CMakeLists.txt
src/etrans/common/internal/: ellips.F90  esetup_dims_mod.F90  esetup_geom_mod.F90  suemplat_mod.F90  suemplatb_mod.F90  tpmald_dim.F90  tpmald_distr.F90
src/etrans/cpu/: CMakeLists.txt
src/etrans/cpu/internal/: cpl_int_mod.F90  easre1ad_mod.F90  easre1b_mod.F90  easre1bad_mod.F90  edealloc_resol_mod.F90  edir_trans_ctl_mod.F90  edir_trans_ctlad_mod.F90  edist_spec_control_mod.F90  efsc_mod.F90  efscad_mod.F90  eftdir_ctl_mod.F90  eftdir_ctlad_mod.F90  eftdirad_mod.F90  eftinv_ctl_mod.F90  eftinv_ctlad_mod.F90  eftinvad_mod.F90  egath_spec_control_mod.F90  einv_trans_ctl_mod.F90  einv_trans_ctlad_mod.F90  eledir_mod.F90  eledirad_mod.F90  eleinv_mod.F90  eleinvad_mod.F90  ellips.F90  eltdir_ctl_mod.F90  eltdir_ctlad_mod.F90  eltdir_mod.F90  eltdirad_mod.F90  eltinv_ctl_mod.F90  eltinv_ctlad_mod.F90  eltinv_mod.F90  eltinvad_mod.F90  eprfi1_mod.F90  eprfi1ad_mod.F90  eprfi1b_mod.F90  eprfi1bad_mod.F90  eprfi2_mod.F90  eprfi2ad_mod.F90  eprfi2b_mod.F90  eprfi2bad_mod.F90  (+34 more)
src/etrans/etrans/: CMakeLists.txt
src/etrans/etrans/aux/: ellips.F90  ellips.h  ellips64.F90
src/etrans/etrans/include/: edir_transad.h  edist_grid.h  edist_spec.h  egath_grid.h  egath_spec.h  einv_trans.h  esetup_trans.h  etrans_inq.h
src/etrans/etrans/internal/: cpl_int_mod.F90  easre1bad_mod.F90  edealloc_resol_mod.F90  edir_trans_ctlad_mod.F90  efscad_mod.F90  eftdirad_mod.F90  eftinv_ctl_mod.F90  eftinv_ctlad_mod.F90  eftinvad_mod.F90  eledir_mod.F90  eledirad_mod.F90  eleinv_mod.F90  eleinvad_mod.F90  eltdir_mod.F90  eltdirad_mod.F90  eltinv_ctl_mod.F90  eltinv_ctlad_mod.F90  eltinv_mod.F90  eprfi1ad_mod.F90  eprfi1b_mod.F90  eprfi1bad_mod.F90  eset_resol_mod.F90  esetup_geom_mod.F90  espnorm_ctl_mod.F90  espnormc_mod.F90  espnsde_mod.F90  (+12 more)
src/etrans/gpu/: CMakeLists.txt
src/programs/: CMakeLists.txt  driver-spectraltransform.F90  driver-spectraltransform_indiv.F90  ectrans-benchmark-data_mod.F90  ectrans-benchmark-data_mod.f90  ectrans-benchmark-driver.F90  ectrans-benchmark-driver_mod.F90  ectrans-benchmark-ifs.F90  ectrans-benchmark-program.F90  ectrans-benchmark.F90  ectrans-benchmark1.F90  ectrans-lam-benchmark.F90  ectrans.in  test_program.F90
src/programs/util/: ectrans_field_api_helper.F90  ectrans_memory.F90  ectrans_memory.c
src/programs/wrappers/: dir_trans.F90  dir_trans.inc  dir_transad.F90  dir_transad.inc  dist_grid.inc  dist_spec.F90  dist_spec.inc  gath_spec.F90  gath_spec.inc  inv_trans.F90  inv_trans.inc  inv_transad.F90  inv_transad.inc  setup_trans.F90  setup_trans.inc  setup_trans0.F90  setup_trans0.inc  specnorm.F90  specnorm.inc  trans_inq.F90  trans_inq.inc
src/trans/: CMakeLists.txt  sedrenames.txt
src/trans/algor/: bluestein_mod.F90  butterfly_alg_mod.F90  fft992.F90  fft992_cc.F90  interpol_decomp_mod.F90  seefmm_mix.F90  set99.F90  set99b.F90  wts500_mod.F90
src/trans/common/: CMakeLists.txt
src/trans/cpu/: CMakeLists.txt  sedrenames.txt
src/trans/gpu/: #CMakeLists.txt#  CMakeLists.txt  CMakeLists.txt.hip
src/trans/include/: fspgl_intf.h
src/trans/interface/: inv_trans.h  inv_transad.h  setup_trans0.h  specnorm.h  trans_pnm.h
src/trans/internal/: abort_trans_mod.F90  asre1_mod.F90  asre1ad_mod.F90  asre1b_mod.F90  asre1bad_mod.F90  cdmap_mod.F90  cpledn_mod.F90  dealloc_resol_mod.F90  dir_trans_ctl_mod.F90  dir_trans_ctlad_mod.F90  dist_grid_32_ctl_mod.F90  dist_grid_ctl_mod.F90  dist_spec_control_mod.F90  ectrans_version_mod.F90.in  eq_regions_mod.F90  field_split_mod.F90  fourier_in_mod.F90  fourier_inad_mod.F90  fourier_out_mod.F90  fourier_outad_mod.F90  fsc_mod.F90  fscad_mod.F90  fspgl_int_mod.F90  ftdir_ctl_mod.F90  ftdir_ctlad_mod.F90  ftdir_mod.F90  ftdirad_mod.F90  ftinv_ctl_mod.F90  ftinv_ctlad_mod.F90  ftinv_mod.F90  ftinvad_mod.F90  gath_grid_32_ctl_mod.F90  gath_grid_ctl_mod.F90  gath_spec_control_mod.F90  gawl_mod.F90  gpnorm_trans_ctl_mod.F90  gpnorm_trans_ctlad_mod.F90  gpnorm_trans_ctltl_mod.F90  inigptr_mod.F90  inv_trans_ctl_mod.F90  (+82 more)
src/trans/module/: dir__trans_mod.F90  dir_transad_mod.F90  dist_spec_mod.F90  ectrans_mod.F90  gath_spec_mod.F90  inv__trans_mod.F90  inv_transad_mod.F90  setup__trans0_mod.F90  setup__trans_mod.F90  setup_trans0_mod.F90  spec_norm_mod.F90  specnorm_mod.F90  trans__inq_mod.F90
src/trans/sharedmem/: sharedmem_mod.F90
src/transi/: CMakeLists.txt  transi.c  transi.h  transi_module.F90  version.c.in  version.h
tests/: CMakeLists.txt  compare_checksums.py  test-install.sh.in
tests/test_ectrans4py/: data.py  test_ectrans4py.py
tests/test_ectrans4py/data/: __init__.py  antwrp1300-s1t@sp.npy  antwrp1300-s1t@sp2gp.npy  lon_number_by_lat.npy  tl149-c24-s1t@sp.npy  tl149-c24-s1t@sp2gp.npy  zonal_wavenumbers.npy
tests/test_install/: CMakeLists.txt  main.F90  transi_gptosp.c  transi_sptogp.c
tests/trans/: test_adjoint.F90  test_dirtrans_adjoint.F90  test_example.F90  test_gpnorm_adjoint.F90  test_invtrans_adjoint.F90  test_multiple_res.F90  test_setup_trans0.F90  test_split_mpi_comm.F90
tests/trans/api/: CMakeLists.txt
tests/trans/unit/: CMakeLists.txt  util.F90
tests/transi/: transi_test.c  transi_test.h  transi_test_dirtrans_adjoint.c  transi_test_example.c  transi_test_invtrans_adjoint.c  transi_test_io.c  transi_test_lam.c  transi_test_lam_dirtrans_adjoint.c  transi_test_lam_invtrans_adjoint.c  transi_test_lonlat.c  transi_test_lonlat_diff_incr.c  transi_test_memory.c  transi_test_memory_lonlat.c  transi_test_program.c  transi_test_split_comm.c  transi_test_timings.c  transi_test_vordiv_to_UV.c
(+971 files in other folders)
